# Robot-Operating-System-project-ROS-

challenge_project/: CMakeLists.txt  README.md  package.xml
challenge_project/launch/: challenge1_task1.launch  challenge1_task2.launch  challenge1_task3.launch  challenge2_task1.launch  challenge2_task2.launch  challenge2_task3.launch  challenge3_task1.launch  challenge3_task2.launch  challenge3_task3.launch  gazebo.launch  rviz.launch
challenge_project/rviz/: configuration.rviz
challenge_project/scripts/: challenge1_task1_linefollowing.py  challenge1_task2_linefollowing.py  challenge1_task3_linefollowing.py  challenge2_task1_distanceFromWall.py  challenge2_task2_distanceFromWall.py  challenge2_task2_world_control.py  challenge2_task3_distanceFromWall.py  challenge2_task3_world_control.py  challenge3_task1_Circuit.py  challenge3_task2_Circuit.py  challenge3_task3_Circuit.py  challenge3a_world_control.py  challenge3b_world_control.py
challenge_project/urdf/: robot_with_sensors.gazebo  robot_with_sensors.xacro  robot_with_sensors_materials.xacro  turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
challenge_project/worlds/: challenge1.world  challenge2.world  challenge3.world
